# wdlcube

./: .gitignore  README .md  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: 1小模型.ncnn.param
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/min2phase/: min2phase.h
app/src/main/cpp/src/: Search.cpp  Search.h  min2phase.cpp  tools.cpp
app/src/main/cpp/yolo/: ndkcamera.cpp  ndkcamera.h  yolov8.h  yolov8_pose.cpp  yolov8ncnn.cpp
app/src/main/java/com/example/cubesolver/: MainActivity.kt
app/src/main/java/com/example/cubesolver/camera/: CubeAnalyzer.kt  YoloNcnn.kt
app/src/main/java/com/example/cubesolver/ui/: AnimatedRubiksCube3D.kt  AutoScannerFlow.kt  CameraScanner.kt  CubeCameraScreen.kt  CubePlayerScreen.kt  CubeSimulator.kt  FlatCubeView.kt  HomeScreen.kt  ManualScannerFlow.kt  StateSelectionScreen.kt  UserGuide.kt
app/src/main/java/com/example/cubesolver/ui/result/: MinimalistConsole.kt  ProfessionalConsole.kt  ResultScreen.kt  ResultScreenWrapper.kt
app/src/main/java/com/example/cubesolver/ui/theme/: Theme.kt
app/src/main/java/com/example/cubesolver/utils/: ColorUtils.kt  CubeSolver.kt  CubeValidator.kt  RubiksCube3D.kt  ScrambleUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
